fix(order): resolve builder errors in OrderMapper by using manual constructors
- Replaced Lombok builder with standard object instantiation in mapToEntityList.

- Synchronized entity constructors with mapping logic to bypass Lombok processing issues.